Fixing th elogc of overflow

--- a/src/components/ButtonRow/ButtonRow.module.css
+++ b/src/components/ButtonRow/ButtonRow.module.css
@@ -1,2 +1,4 @@
 .buttonRow {
+  overflow-x: auto;
+  padding: 20px 0;
 }
