--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -36,5 +36,7 @@
 
 .controlColumn {
   width: 50%;
-  overflow: scroll;
+
+  white-space: nowrap;
 }
+
